[package]
name = "mist"
version = "0.1.0"
authors = ["Colton Donnelly <colton@donn.io>"]
edition = "2018"
description = "The Mist Programming Language, streamed live on my Twitch :)"
repository = "https://github.com/cdmistman/mist"
license-file = "LICENSE"

[dependencies]
clap = { version = "2", features = [] }
either = "1"
handlebars = "3"
nom = "6.1"
once_cell = "1"
